@@ -1,0 +1,3 @@
+Makefile
+Makefile.in
+nautilus-actions.schemas
