@@ -1,2 +1,0 @@
-nautilus-actions.schemas
-nautilus-actions.schemas.in
