@@ -1,3 +1,14 @@
+2009-08-03 Pierre Wieser <pwieser@trychlos.org>
+
+	* data/nautilus-actions.schemas.in:
+	* data/Makefile.am: New files.
+
+	* configure.ac:
+	* Makefile.am: Updated accordingly.
+
+	* src/common/na-xml-writer.c:
+	Fix schemas generation (long description tag).
+
 2009-08-01 Pierre Wieser <pwieser@trychlos.org>
 
 	* configure.ac:
